[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
tokio = { version = "1.34.0", features = [ "full" ] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
serde = { version = "1.0.193", features = ["derive"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["add-extension", "trace"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tracing = "0.1.40"
